# chroma_cache

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
chromacache/: __init__.py  chromacache.py
chromacache/embedding_functions/: AbstractEmbeddingFunction.py  CohereEmbeddingFunction.py  LaserEmbeddingFunction.py  LiteLLMEmbeddingFunction.py  MistralAIEmbeddingFunction.py  OpenAIEmbeddingFunction.py  SentenceTransformerEmbeddingFunction.py  VoyageAIEmbeddingFunction.py  __init__.py  azure_embedding_function.py  ovh_embedding_function.py  scaleway_embedding_function.py
tests/: test_chromacache.py
tests/embedding_functions/: test_AbstractEmbeddingFunction.py
