[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "chromacache"
version = "0.0.1"
authors = [
  { name="Mathieu Ciancone", email="mathieu@wikit.ai" }
  { name="Imène Kerboua, email="imenelkerboua@gmail.com"},
]
description = "A helper tool that simplifies caching embeddings for reusability."
keywords = ["chromadb", "vectorestore", "embeddings", "cache"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "voyageai>=0.1.6",
  "tiktoken>=0.5.2",
  "openai>=1.6.1",
  "chromadb>=0.4.21",
  "python-dotenv>=1.0.1",
  "cohere==4.41",
  "laser_encoders==0.0.1",
  "sentence-transformers==2.2.2",
  "mistralai==0.0.12"
]

[project.urls]
Homepage = "https://github.com/Lyon-NLP/chroma_cache"
